# riseup-alias-generator

./: .editorconfig  Cargo.toml  Dockerfile  README.md  package.nix  pyproject.toml
.github/workflows/: docker.yml
riseup_alias_generator/: __main__.py
src/: main.rs
