[package]
name = "riseup-alias-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11.3", features = ["macros"] }
reqwest = { version = "0.11.13", features = ["cookies"] }
tokio = { version = "1.24.2", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
xml = "0.0.1"
xmltree = "0.10.3"

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
strip = true
lto = true
