[tool.poetry]
name = "riseup-alias-generator"
version = "0.1.0"
description = ""
authors = ["cofob <cofob@riseup.net>"]
readme = "README.md"
packages = [{include = "riseup_alias_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
pyTelegramBotAPI = "^4.10.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
